# route53-ip-update

./: .gitignore  Cargo.toml  README.md
src/: args.rs  config.rs  error.rs  main.rs  query_address_type.rs  query_interfaces.rs  query_ip_service.rs  ttl.rs  update.rs
