[package]
name = "route53-ip-update"
authors = ["David Cuthbert <dacut@kanga.org>"]
description = "Update a Route 53 DNS record with your public IPv4 and/or IPv6 address"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
aws-config = "0.51.0"
aws-sdk-route53 = "0.21.0"
clap = { version = "4.0.29", features = ["color", "derive", "error-context", "help", "std", "suggestions", "unicode", "usage", "wrap_help"] }
env_logger = "0.10.0"
futures = "0.3.25"
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper = "0.14.23"
log = "0.4.17"
network-interface = "0.1.5"
once_cell = "1.21.3"
reqwest = { version = "0.11.13", features = ["rustls-tls", "rustls-tls-native-roots", "trust-dns"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
tower = "0.5.2"
trust-dns-proto = "0.22.0"
trust-dns-resolver = "0.22.0"
