[package]
name = "route53-ip-update"
authors = ["David Cuthbert <dacut@kanga.org>"]
description = "Update a Route 53 DNS record with your public IPv4 and/or IPv6 address"
version = "0.1.1"
license = "Apache-2.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1.76.0"
clap = { version = "4.5.38", features = ["color", "derive", "error-context", "help", "std", "suggestions", "unicode", "usage", "wrap_help"] }
env_logger = "0.11.8"
futures = "0.3.31"
hickory-resolver = "0.24.4"
humantime = "2.2.0"
humantime-serde = "1.1.1"
hyper = "1.6.0"
log = "0.4.27"
network-interface = "2.0.1" 
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["hickory-dns", "rustls-tls", "rustls-tls-native-roots"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.22"
tower = "0.5.2"
